--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.23.2",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.22.0",
@@ -18,18 +19,22 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
-    "scroll-lock": "^2.1.5"
+    "scroll-lock": "^2.1.5",
+    "simplebar-react": "^3.3.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
