--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-location": "^3.844.0",
+    "@aws-sdk/credential-providers": "^3.844.0",
     "@clerk/nextjs": "^6.23.2",
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.10.0",
+    "cloudinary": "^2.7.0",
+    "country-state-city": "^3.2.1",
+    "framer-motion": "^12.23.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
+    "maplibre-gl": "^5.6.1",
     "motion": "^12.22.0",
     "next": "15.3.4",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
+    "react-map-gl": "^8.0.4",
     "react-phone-input-2": "^2.15.1",
     "scroll-lock": "^2.1.5",
     "simplebar-core": "^1.3.2",
@@ -27,7 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20",
+    "@types/node": "^20.19.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
