--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-github-calendar": "^4.5.9",
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
     "react-map-gl": "^8.0.4",
