--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.10.0",
+    "clipboard-copy": "^4.0.1",
     "cloudinary": "^2.7.0",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.3",
@@ -23,10 +24,10 @@
     "lucide-react": "^0.525.0",
     "maplibre-gl": "^5.6.1",
     "motion": "^12.22.0",
-    "next": "15.3.4",
+    "next": "^15.4.5",
     "next-cloudinary": "^6.16.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-github-calendar": "^4.5.9",
     "react-icons": "^5.5.0",
