--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-phone-input-2": "^2.15.1",
     "simplebar-core": "^1.3.2",
     "simplebar-react": "^3.3.2",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
