feat(posts): add PostsBodyParser, PostsFilters, PostsHeader, and PostsMain components; implement content management features with Zustand store

--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.3",
     "lodash": "^4.17.21",
+    "lucide": "^0.555.0",
     "lucide-react": "^0.525.0",
     "maplibre-gl": "^5.6.1",
     "motion": "^12.22.0",
     "next": "^15.4.5",
     "next-cloudinary": "^6.16.0",
-    "react": "^19.1.1",
+    "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-github-calendar": "^4.5.9",
